--- a/public/theam/scss/common/light/_variables.scss
+++ b/public/theam/scss/common/light/_variables.scss
@@ -41,7 +41,7 @@ $colors: (
 
 
 $theme-colors: (
-  primary:         #844fc1,
+  primary:         #82ae46,
   secondary:       #6c7293,
   success:         #21bf06,
   info:            #3b86d1,
